lox-tests/tests/super/super_without_name.stderr
ERROR: Expected method name after 'super'
 --> 5:5
  |
5 |     super.; // Error at ';': Expect superclass method name.
  |     ^-----^
